--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@headlessui/react": "^2.2.7",
+    "@react-oauth/google": "^0.12.2",
     "antd": "^5.27.3",
     "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.2",
     "react": "^18.3.1",
